# OC_P4

./: p4.ipynb  pyproject.toml
src/projet4/: .gitignore
